[tool.poetry]
name = "repl_python3_Leaf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
psutil = "^5.8.0"
replit = "^3.2.2"
sympy = "^1.8"
youtube_dl = "^2021.6.6"
country-converter = "^0.7.3"
Flask = "^2.0.1"
motor = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
